[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/ui/hud/hud_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/Acme-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scene/ui/hud/hud.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -96.0
margin_right = 283.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUI" type="Label" parent="Background"]
margin_left = 146.37
margin_top = 28.2606
margin_right = 250.37
margin_bottom = 56.2606
custom_fonts/font = ExtResource( 1 )
text = "Health: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponUI" type="Label" parent="Background"]
margin_left = 146.37
margin_top = 54.9522
margin_right = 258.37
margin_bottom = 82.9522
custom_fonts/font = ExtResource( 1 )
text = "Pistol: 25/50"

[node name="Display" type="ColorRect" parent="Background"]
anchor_bottom = 1.0
margin_right = 123.0
color = Color( 0, 0, 0, 0.490196 )

[node name="WeaponSlot" type="Label" parent="Background/Display"]
margin_left = 2.0
margin_top = 8.76349
margin_right = 42.0
margin_bottom = 40.7635
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="Crosshair" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -3.0
margin_right = 3.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 3, 3 )
color = Color( 0, 0, 0, 0.686275 )
